<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DressIt</string>
    
    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_add_post">Add Post</string>
    <string name="title_profile">Profile</string>
    
    <!-- Auth -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_already_have_account">Already have an account? Login here</string>
    
    <!-- Profile -->
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_logout">Logout</string>
    <string name="title_my_posts">My Posts</string>
    
    <!-- Posts -->
    <string name="hint_post_description">Write something about your outfit…</string>
    <string name="btn_upload_image">Upload Image</string>
    <string name="btn_post">Post</string>
    <string name="msg_post_success">Post uploaded successfully</string>
    <string name="msg_post_error">Error uploading post</string>
    
    <!-- New strings from the code block -->
    <string name="btn_register_prompt">Don\'t have an account? Register here</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    
    <!-- Dialogs -->
    <string name="dialog_delete_post_title">Delete Post</string>
    <string name="dialog_delete_post_message">Are you sure you want to delete this post?</string>
    
    <!-- Error Messages -->
    <string name="error_empty_fields">Please fill in all fields</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_password_too_short">Password must be at least 6 characters</string>

    <!-- Profile -->
    <string name="dialog_logout_message">Are you sure you want to logout?</string>
    <string name="btn_change_photo">Change Photo</string>
</resources>